타입스크립트 도입이 매우 시급!!

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -95,3 +95,13 @@
     border: 1px rgb(255, 72, 0) solid;
     text-align: center;
 }
+
+.filterBox {
+    padding: 5px;
+    display: flex;
+    gap: 5px;
+}
+
+.filterBox .selectBox {
+    width: 100px;
+}
