--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -105,3 +105,13 @@
 .filterBox .selectBox {
     width: 100px;
 }
+
+.v-text-field.v-text-field--solo .v-input__control {
+    min-height: 36px;
+    padding: 0;
+}
+
+.v-text-field.v-text-field--enclosed .v-text-field__details {
+    padding-top: 0px;
+    margin-bottom: 0px;
+}
