--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -115,3 +115,12 @@
     padding-top: 0px;
     margin-bottom: 0px;
 }
+
+@media screen and (min-width: 1800px) {
+    .section .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: space-around;
+    }
+}
