모바일도 대응하고싶음

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,3 +129,9 @@
         justify-content: space-around;
     }
 }
+
+@media screen and (max-width: 750px) {
+    .browser {
+        padding: 0;
+    }
+}
